--- a/Main/Views/TambahKasusPages/PengaduanPage.xaml
+++ b/Main/Views/TambahKasusPages/PengaduanPage.xaml
@@ -4,7 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Main.Views.TambahKasusPages"
-    mc:Ignorable="d" FontSize="15"
+    mc:Ignorable="d"
+      FontSize="13"
          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:main="clr-namespace:Main"
       xmlns:utilities="clr-namespace:Main.Utilities"
@@ -32,11 +33,11 @@
             <WrapPanel>
                 <Label Content="Waktu Lapor"></Label>
                 <WrapPanel>
-                    <DatePicker SelectedDateFormat="Long" Language="id-ID" 
+                    <DatePicker SelectedDateFormat="Long" Height="40" Language="id-ID" FontSize="13"
                             SelectedDate="{Binding TanggalLapor,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}"
                             Width="250" Margin="0,0,5,0"  materialDesign:HintAssist.Hint="Pick Date"  Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
-                    <materialDesign:TimePicker Language="id-ID" Height="36" SelectedTime="{Binding TanggalLapor, Mode=TwoWay}"
-                                       materialDesign:HintAssist.Hint="Validates"
+                    <materialDesign:TimePicker Language="id-ID" Height="40" SelectedTime="{Binding TanggalLapor, Mode=TwoWay}"
+                                       materialDesign:HintAssist.Hint="Validates" FontSize="13"
                                        IsInvalidTextAllowed="False"
                                        Is24Hours="{Binding IsChecked, ElementName=Is24HourCheckbox}"
                                        Width="100">
